# CoordinatorAssistant

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: App.cpp  App.h  MainFrame.cpp  MainFrame.h
src/core/: Actions.h  Defaults.cpp  Defaults.h  Helpers.cpp  Helpers.h  States.h
src/ui/: StatesDialog.cpp  StatesDialog.h
